--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-webp-html-nosvg": "^1.1.1",
     "gulp-webpcss": "^1.1.1",
     "gulp-zip": "^5.1.0",
+    "jquery": "^3.6.4",
     "sass": "^1.57.1",
     "swiper": "^8.4.6",
     "webp-converter": "^2.2.3",
